chore: Update logo image source in HTML files

--- a/view/all-movies.html
+++ b/view/all-movies.html
@@ -3,7 +3,7 @@
 </div>
 <div ng-show="!loading ">
   <header class="header">
-    <img class="full-logo-header" src="../assets/images/fullMovies.png" />
+    <img class="full-logo-header" src="../assets/images/amigo.png" />
     <div class="buttons-header">
       <button
         class="buttons-header-item form-control btn btn-outline-light"
