--- a/view/all-user-movies.html
+++ b/view/all-user-movies.html
@@ -1,6 +1,6 @@
 <div>
   <header class="header">
-    <img class="full-logo-header" src="../assets/images/fullMovies.png" />
+    <img class="full-logo-header" src="../assets/images/amigo.png" />
     <div class="buttons-header">
       <div class="input-container" style="margin-right: 20px">
         <img src="../assets/images/search.svg" />
