--- a/view/change-password.html
+++ b/view/change-password.html
@@ -1,7 +1,7 @@
 <div class="container-recover">
     <div class="login-form-container">
         <div class="full-logo-container">
-            <img class="full-Logo-recover" src="../assets/images/fullMovies.png">
+            <img class="full-Logo-recover" src="../assets/images/amigo.png">
         </div>
         <form class="form-login">
             <div class="login-container-form-item">
