--- a/view/new-user.html
+++ b/view/new-user.html
@@ -1,7 +1,7 @@
 <div class="container-cadastro">
     <div class="login-form-container">
         <div class="full-logo-container">
-            <img class="full-Logo-cadastro" src="../assets/images/fullMovies.png">
+            <img class="full-Logo-cadastro" src="../assets/images/amigo.png">
         </div>
         <form class="form-login">
             <div class="login-container-form-item">
