--- a/view/every-user.html
+++ b/view/every-user.html
@@ -1,47 +1,70 @@
 <div class="gif-div" ng-show="loading">
-    <img class="gif-image" src="../assets/images/loading.gif">
+  <img class="gif-image" src="../assets/images/loading.gif" />
 </div>
 <div ng-show="!loading">
-    <header class="header">
-        <img class="full-logo-header" src="../assets/images/fullMovies.png">
-        <div class="buttons-header">
-            <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
-                ui-sref="all-movies">movies</button>
-            <button class="buttons-header-item  form-control btn btn-outline-light" ui-sref="profile"
-                style="width: 6vw;">profile</button>
-            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log out</button>
-        </div>
-    </header>
-    <div class="bestMovies-container">
-        <h1 class="bestMovies-text">all users registered:</h1>
+  <header class="header">
+    <img class="full-logo-header" src="../assets/images/amigo.png" />
+    <div class="buttons-header">
+      <button
+        class="buttons-header-item form-control btn btn-outline-light"
+        style="width: 6vw"
+        ui-sref="all-movies"
+      >
+        movies
+      </button>
+      <button
+        class="buttons-header-item form-control btn btn-outline-light"
+        ui-sref="profile"
+        style="width: 6vw"
+      >
+        profile
+      </button>
+      <button
+        class="buttons-header-item form-control btn btn-primary"
+        style="width: 6vw"
+        ng-click="logOut()"
+      >
+        log out
+      </button>
     </div>
-    <div class="div-every-user-input">
-        <div class="input-container" style="display: flex;">
-            <img src="../assets/images/search.svg">
-            <input class="search-input" style="width: 20vw;" type="text" placeholder="search users..." ng-model="buscarUsers" >
-        </div>
+  </header>
+  <div class="bestMovies-container">
+    <h1 class="bestMovies-text">all users registered:</h1>
+  </div>
+  <div class="div-every-user-input">
+    <div class="input-container" style="display: flex">
+      <img src="../assets/images/search.svg" />
+      <input
+        class="search-input"
+        style="width: 20vw"
+        type="text"
+        placeholder="search users..."
+        ng-model="buscarUsers"
+      />
     </div>
-      <div class="div-every-user">
-          <table class="table table-bordered" style="background-color:  #4018752b">
-              <tr>
-                  <th class="table-header-item">id</th>
-                  <th class="table-header-item">admin</th>
-                  <th class="table-header-item">username</th>
-                  <th class="table-header-item">email</th>
-                  <th class="table-header-item">total time</th>
-                  <th class="table-header-item">most watched genre</th>
-                  <th class="table-header-item"></th>
-              </tr>
-              <tr ng-repeat="user in users | orderBy: 'id'| filter: buscarUsers" >
-                  <td class="td-item">{{user.id}}</td>
-                  <td class="td-item">{{user.admin}}</td>
-                  <td class="td-item" >{{user.username}}</td>
-                  <td class="td-item">{{user.email}}</td>
-                  <td class="td-item">{{user.total_time}}  minutes</td>
-                  <td class="td-item">{{user.most_watched_genre}}</td>
-                  <td style="text-align: center;" ng-click="refresh(user)"><img src="../assets/images/person-circle.svg"></td>
-              </tr>
-          </table>
-      </div>
-
+  </div>
+  <div class="div-every-user">
+    <table class="table table-bordered" style="background-color: #4018752b">
+      <tr>
+        <th class="table-header-item">id</th>
+        <th class="table-header-item">admin</th>
+        <th class="table-header-item">username</th>
+        <th class="table-header-item">email</th>
+        <th class="table-header-item">total time</th>
+        <th class="table-header-item">most watched genre</th>
+        <th class="table-header-item"></th>
+      </tr>
+      <tr ng-repeat="user in users | orderBy: 'id'| filter: buscarUsers">
+        <td class="td-item">{{user.id}}</td>
+        <td class="td-item">{{user.admin}}</td>
+        <td class="td-item">{{user.username}}</td>
+        <td class="td-item">{{user.email}}</td>
+        <td class="td-item">{{user.total_time}} minutes</td>
+        <td class="td-item">{{user.most_watched_genre}}</td>
+        <td style="text-align: center" ng-click="refresh(user)">
+          <img src="../assets/images/person-circle.svg" />
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
