refactor: Update UI button links to use "home" state
Update the UI button links in the HTML files to use the "home" state instead of the "all-movies" state. This change ensures consistency and improves navigation within the application.

- Update the "ui-sref" attribute value from "all-movies" to "home" in multiple HTML files

--- a/view/all-user-movies.html
+++ b/view/all-user-movies.html
@@ -18,7 +18,7 @@
       <button
         class="buttons-header-item form-control btn btn-outline-light"
         style="width: 6vw"
-        ui-sref="all-movies"
+        ui-sref="home"
       >
         MOVIES
       </button>
