--- a/view/home.html
+++ b/view/home.html
@@ -8,7 +8,7 @@
       <button
         class="buttons-header-item form-control btn btn-outline-light"
         style="width: 6vw"
-        ui-sref="all-movies"
+        ui-sref="home"
         ng-if="!isUserLoggedIn"
       >
         Login
@@ -41,13 +41,6 @@
     </section>
   </div>
   <div class="admin-addMovie-div">
-    <button
-      class="buttons-add-item-admin form-control btn btn-outline-light"
-      ui-sref="find-all-movies"
-      style="margin-right: 5px; width: 200px"
-    >
-      find all movies
-    </button>
     <button
       class="buttons-add-item-admin form-control btn btn-outline-light"
       ui-sref="create-movie"
