--- a/css/geral.css
+++ b/css/geral.css
@@ -1,64 +1,64 @@
 .movies-background {
-    background-image: url("../assets/images/moviesBackground.png");
-    width: 62vw;
-    height: 100vh;
+  background-image: url("../assets/images/moviesBackground.png");
+  width: 62vw;
+  height: 100vh;
 }
 
 .gradient-background {
-    background-image: url('../assets/images/bg-gradient.jpg');
-    background-size: cover;
+  background-color: #f5f5f5;
+  background-size: cover;
 }
 
 .header {
-    background-color: #0000002a;
-    height: 12vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-right: 3vw;
+  background-color: #0000002a;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 3vw;
 }
 
 .input-container {
-    border: 1px solid white;
-    border-radius: 0.25rem;
-    padding: 6px 8px;
-    justify-content: center;
+  border: 1px solid white;
+  border-radius: 0.25rem;
+  padding: 6px 8px;
+  justify-content: center;
 }
 
 .search-input {
-    color: white;
-    border: none;
-    border-radius: 4px;
-    background-color: transparent;
-    border-color: transparent;
-    outline: none;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  background-color: transparent;
+  border-color: transparent;
+  outline: none;
 }
 
 .full-logo-header {
-    height: 12vh;
-    padding: 2vh;
-    padding-left: 1.5vw;
+  height: 12vh;
+  padding: 2vh;
+  padding-left: 1.5vw;
 }
 
 .buttons-header {
-    align-items: center;
-    display: flex;
+  align-items: center;
+  display: flex;
 }
 
 .buttons-header-item {
-    margin-right: 5px;
-    text-align: center;
+  margin-right: 5px;
+  text-align: center;
 }
 
 .gif-image {
-    width: 400px;
-    height: 350px;
-    opacity: 70%;
+  width: 400px;
+  height: 350px;
+  opacity: 70%;
 }
 
 .gif-div {
-    display: flex;
-    justify-content:center;
-    height: 100vh;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
 }
