--- a/view/find-all-movies.html
+++ b/view/find-all-movies.html
@@ -8,7 +8,7 @@
       <button
         class="buttons-header-item form-control btn btn-outline-light"
         style="width: 6vw"
-        ui-sref="all-movies"
+        ui-sref="home"
       >
         movies
       </button>
