--- a/view/profile.html
+++ b/view/profile.html
@@ -32,7 +32,7 @@
       <button
         class="buttons-header-item form-control btn btn-outline-light"
         style="width: 6vw"
-        ui-sref="all-movies"
+        ui-sref="home"
       >
         return
       </button>
@@ -66,7 +66,7 @@
         <button
           class="buttons-show-item form-control btn btn-outline-light"
           style="width: max-content; margin-right: -15px"
-          ui-sref="all-movies"
+          ui-sref="home"
           ng-if="showButtons && !isAdmin"
         >
           add new movies
