--- a/css/geral.css
+++ b/css/geral.css
@@ -1,5 +1,5 @@
 .movies-background {
-  background-image: url("../assets/images/moviesBackground.png");
+  background-color: #f5f5f5;
   width: 62vw;
   height: 100vh;
 }
