--- a/view/navbar.html
+++ b/view/navbar.html
@@ -1,8 +1,10 @@
 <header class="ui-header">
-  <img
-    class="ui-logo-header"
-    src="https://avatars.githubusercontent.com/u/55717360?s=200&v=4"
-  />
+  <a class="ui-logo-header" ui-sref="home">
+    <img
+      class="ui-logo-header"
+      src="https://avatars.githubusercontent.com/u/55717360?s=200&v=4"
+    />
+  </a>
   <div>
     <button
       class="doca-button doca-button--secondary"
