refactor: Add moment.js and angular-moment.js dependencies, update filters and controllers
This commit adds the moment.js and angular-moment.js dependencies to the project, allowing for better date formatting and manipulation. It also updates the format-date and phone filters to utilize the new dependencies. Additionally, the showPostController is modified to include a loading state while fetching data.

- Add moment.min.js and angular-moment.min.js to the assets/libs directory
- Update the format-date.js and phone.js filters to use moment.js
- Modify the showPostController to include a loading state

--- a/view/show-post.html
+++ b/view/show-post.html
@@ -1,6 +1,26 @@
 <div class="doca">
   <navbar></navbar>
-  <div class="main-div-show">
-    <div class="text-div">{{post}}</div>
+  <div>
+    <loading class="doca-mt-8" ng-show="loading"></loading>
+
+    <div class="doca-p-4" ng-show="!loading">
+      <h1 class="doca-page__title">{{post.title}}</h1>
+      <p class="doca-page__subtitle">
+        {{ post.created_at | dateFormat: 'DD/MM/YYYY' }}
+      </p>
+      <hr class="doca-separator" />
+      <button ng-click="likePost()">
+        <i
+          class="doca-icon doca-icon__heart"
+          ng-class="{ 'doca-icon--solid doca-text--danger': post.is_liked, 'doca-icon--regular': !post.is_liked }"
+        ></i>
+      </button>
+      <span
+        ng-class="{ 'doca-icon--solid doca-text--danger': post.is_liked, 'doca-icon--regular': !post.is_liked }"
+        >{{post.total_likes}}
+      </span>
+      <hr class="doca-separator" />
+      <p class="doca-page__subtitle doca-mt-4">{{post.content}}</p>
+    </div>
   </div>
 </div>
