--- a/view/home.html
+++ b/view/home.html
@@ -6,18 +6,21 @@
   <div
     class="doca-page"
     ng-show="!loading"
-    style="margin-inline: 6rem; border-radius: 1rem; margin-top: 2rem"
+    style="margin-inline: 2rem; border-radius: 1rem; margin-top: 2rem"
   >
     <div>
       <div ng-repeat="post in posts">
         <ul class="doca-list">
           <a ng-href="#!/post/{{ post.id }}">
             <li class="doca-list__item">
-                <h1 class="doca-page__title">{{ truncate(post.title, 50) }}</h1>
-                <h2 class="doca-page__subtitle">
-                  {{ truncate(post.content, 400) }}
+              <h1 class="doca-page__title">{{ truncate(post.title, 50) }}</h1>
+              <h2 class="doca-page__subtitle">
+                {{ truncate(post.content, 400) }}
               </h2>
-              </li>
+              <h3 class="doca-page__subtitle">
+                {{ post.created_at | dateFormat: 'DD/MM/YYYY' }} - {{
+                post.total_likes }} likes
+              </h3>
             </li>
           </a>
         </ul>
