refactor: Update UI styles and add modal class
Update the UI styles for the recover, update-user, every-user, cadastro, manage-movies, and geral CSS files to improve visual consistency. Additionally, add the "modal" class to the CSS file to display modals.

- Update the recover.css, update-user.css, every-user.css, cadastro.css, manage-movies.css, and geral.css files
- Add the ".modal" CSS class

--- a/view/navbar.html
+++ b/view/navbar.html
@@ -11,6 +11,7 @@
       style="width: 6vw"
       ui-sref="home"
       ng-if="!isUserLoggedIn"
+      ng-click="triggerLogin()"
     >
       Login
     </button>
