--- a/view/show-post.html
+++ b/view/show-post.html
@@ -1,9 +1,8 @@
 <div class="doca">
   <navbar></navbar>
-  <div>
+  <div style="padding-inline: 30rem">
     <loading class="doca-mt-8" ng-show="loading"></loading>
-
-    <div class="doca-p-4" ng-show="!loading">
+    <div class="doca-mt-8" ng-show="!loading">
       <h1 class="doca-page__title">{{post.title}}</h1>
       <p class="doca-page__subtitle">
         {{ post.created_at | dateFormat: 'DD/MM/YYYY' }}
