refactor: Update page title and UI styles for consistency
Update the page title in index.html to "Amigo Medium" for better branding. Additionally, update the UI styles in recover.css, update-user.css, every-user.css, cadastro.css, manage-movies.css, and geral.css to improve visual consistency across the application.

- Update the page title in index.html
- Update the UI styles in recover.css, update-user.css, every-user.css, cadastro.css, manage-movies.css, and geral.css

--- a/view/home.html
+++ b/view/home.html
@@ -5,7 +5,7 @@
 
   <div
     ng-show="!loading"
-    style="margin-inline: 30rem; border-radius: 0.5rem; margin-top: 2rem"
+    style="margin-inline: 20%; border-radius: 0.5rem; margin-top: 2rem"
   >
     <div>
       <div ng-repeat="post in posts">
