--- a/view/navbar.html
+++ b/view/navbar.html
@@ -20,6 +20,7 @@
       ui-sref="profile"
       style="width: 6vw"
       ng-if="!isUserLoggedIn"
+      ng-click="triggerRegister()"
     >
       Cadastrar
     </button>
