--- a/view/show-post.html
+++ b/view/show-post.html
@@ -1,6 +1,6 @@
 <div class="doca">
   <navbar></navbar>
-  <div style="padding-inline: 30rem">
+  <div style="padding-inline: 20%">
     <loading class="doca-mt-8" ng-show="loading"></loading>
     <div class="doca-mt-8" ng-show="!loading">
       <h1 class="doca-page__title">{{post.title}}</h1>
