refactor: Add like functionality to showPostController
Add the ability to like and dislike posts in the showPostController. This allows users to interact with posts and update the UI accordingly.

- Add like() function to showPostController
- Update show-post.html to call like() function on button click
- Update PostService.js to include likePost() and dislikePost() functions

--- a/view/show-post.html
+++ b/view/show-post.html
@@ -8,7 +8,7 @@
         {{ post.created_at | dateFormat: 'DD/MM/YYYY' }}
       </p>
       <hr class="doca-separator" />
-      <button ng-click="likePost()">
+      <button ng-click="like()">
         <i
           class="doca-icon doca-icon__heart"
           ng-class="{ 'doca-icon--solid doca-text--danger': post.is_liked, 'doca-icon--regular': !post.is_liked }"
