refactor: Add createPost functionality to navbarController
Add the ability to create a post in the navbarController. This allows users to write and submit posts, which will be displayed on the website.

- Add createPost() function to navbarController
- Update navbar.html to include a "Write" button for creating posts
- Update PostService.js to include createPost() function

--- a/view/navbar.html
+++ b/view/navbar.html
@@ -25,6 +25,14 @@
       Cadastrar
     </button>
     <button
+      class="doca-button doca-button--tertiary"
+      style="width: 6vw"
+      ng-if="isUserLoggedIn"
+      ng-click="triggerWrite()"
+    >
+      Write
+    </button>
+    <button
       class="doca-button doca-button--primary"
       style="width: 6vw"
       ng-if="isUserLoggedIn"
