--- a/view/show-post.html
+++ b/view/show-post.html
@@ -5,7 +5,7 @@
     <div class="doca-mt-8" ng-show="!loading">
       <h1 class="doca-page__title">{{post.title}}</h1>
       <p class="doca-page__subtitle">
-        {{ post.created_at | dateFormat: 'DD/MM/YYYY' }}
+        {{ post.user.name }} - {{ post.created_at | dateFormat: 'DD/MM/YYYY' }}
       </p>
       <hr class="doca-separator" />
       <button ng-click="like()">
